css/main.css
/* ... */
/* HACK */
.hide-lang {
	overflow: hidden;
	height: 15px;
}
.hide-lang .description {
	display: block;
	float: none !important;
	padding-bottom: 10px;
	margin-left: 0 !important;
}



/* Add food item and menu category style */

.profile-avatar-container-menu-category{
	height: 142px;
}

.fields-heading-cat-name{
	margin: 35px 0 15px 0;
}

.menu-item-form .fields-block{
	margin: 0 0 35px 0;
}

.menu-item-form .fields-block.fields-block-nomargin{
	margin: 0;
}

.ui.segment.menu-segment{
	margin: 0 0 20px 0;
	position: relative;
}

.ui.segment.menu-segment:last-of-type{
	margin: 0;
}

.ui.ribbon.label.menu-segment-label{
	left: calc(-1.5rem - 1.2em);
}



/* Profile menu page */

.new-food-items-slider-wrapper{
	margin: 20px 0 0 0;
	overflow: hidden;
}

.new-food-items-slider-list{
	width: 30000px;
}

.new-food-items-slider-list > li{
	width: 190px;
	margin: 0 19px 0 0;
	float: left;
}

.new-food-items-slider-list > li:last-of-type{
	margin: 0;
}

.new-food-item-preview{
	display: block;
	width: 100%;
	height: 142px;
	position: relative;
	overflow: hidden;
	border-radius: 4px;
	background-color: #000;
}

.new-food-item-preview-img img{
	display: block;
	width: 100%;
	height: 100%;
	/*object-fit: cover;*/
	transition: opacity .3s ease, transform .3s ease;
}

.new-food-item-preview-btns{
	position: absolute;
	top: 7px;
	right: 3px;
	opacity: 0;
	transition: opacity .3s ease, transform .3s ease;
	transition-delay: .1s;
}

.new-food-item-preview-img{
	display: block;
	width: 100%;
	height: 100%;
}

.new-food-item-preview:hover img{
	opacity: .5;
	transform: scale(1.1);
}

.new-food-item-preview:hover .new-food-item-preview-btns{
	opacity: 1;
}

.new-food-item-info{
	padding: 7px 4px 0 4px;
}

.new-food-category,
a.new-food-category{
	display: inline-block;
	font-size: 10px;
	color: #aaa;
	transition: color .3s ease;
}

.new-food-category:hover,
a.new-food-category:hover{
	color: #ec910e;
}

.new-food-name,
a.new-food-name{
	display: inline-block;
	font-weight: 600;
	font-size: 14px;
	color: #333;
	transition: color .3s ease;
}

.new-food-name:hover,
a.new-food-name:hover{
	color: #ec910e;
}

.new-food-items-slider-controls{
	position: absolute;
	top: 20px;
	right: 20px;
	height: 26px;
	line-height: 26px;
	font-size: 20px;
}

.new-food-items-slider-controls i.icon{
	height: 26px;
	cursor: pointer;
	transition: color .3s ease;
}

.new-food-items-slider-controls i.icon:not(.disabled):hover{
	color: #ec910e;
}

.menu-categories-list{
	margin: 20px 0 0 0;
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-start;
}

.menu-categories-list > li{
	width: 255px;
	margin: 0 26px 28px 0;
}

.menu-categories-list > li:nth-of-type(3n){
	margin: 0 0 28px 0;
}

.menu-categories-list > li:nth-last-of-type(1){
	margin: 0;
}

.menu-categories-list > li:nth-last-of-type(2),
.menu-categories-list > li:nth-last-of-type(3){
	margin: 0 26px 0 0;
}

.menu-category-preview{
	width: 100%;
	height: 191px;
	border-radius: 4px;
	overflow: hidden;
	background-color: #000;
	position: relative;
}

.menu-category-preview-img{
	display: block;
	width: 100%;
	height: 100%;
}

.menu-category-preview-img > img{
	display: block;
	width: 100%;
	height: 100%;
	/*object-fit: cover;*/
	transition: opacity .3s ease, transform .3s ease;
}

.menu-category-preview:hover img{
	opacity: .5;
	transform: scale(1.1);
}

.menu-category-preview-btns{
	position: absolute;
	top: 7px;
	right: 3px;
	opacity: 0;
	transition: opacity .3s ease, transform .3s ease;
	transition-delay: .1s;
}

.menu-category-preview-img{
	display: block;
	width: 100%;
	height: 100%;
}

.menu-category-preview:hover .menu-category-preview-btns{
	opacity: 1;
}

.menu-category-preview-info{
	padding: 10px 4px 0 4px;
}

.menu-category-preview-info a{
	color: #000;
	display: inline-block;
	font-weight: 600;
	transition: color .3s ease;
}

.menu-category-preview-info a:hover{
	color: #ec910e;
}

.top-right-menu-btns{
	position: absolute;
	top: 19px;
	right: 20px;
}

.no-menu-categories-msg{
	font-size: 22px;
	color: #ccc;
	margin: 60px 0 !important;
	text-align: center;
}




/* Profile menu category page */

.menu-category-food-items-list{
	margin: 20px 0 0 0;
}

.menu-category-food-items-list > li{
	margin: 0 0 15px 0;
	position: relative;
	border-radius: 4px;
	transition: background-color .3s ease;
}

.menu-category-food-items-list > li:hover{
	background-color: #fafafa;
}

.menu-category-food-items-list > li:last-of-type{
	margin: 0;
}

.menu-category-food-item-preview{
	display: block;
	width: 175px;
	height: 145px;
	float: left;
	overflow: hidden;
	border-radius: 4px;
}

.menu-category-food-item-preview img{
	display: block;
	width: 100%;
	height: 100%;
	/*object-fit: cover;*/
	transition: transform .5s ease;
}

.menu-category-food-items-list > li:hover .menu-category-food-item-preview img{
	transform: scale(1.1);
}

.menu-category-food-item-preview-info{
	width: calc(100% - 175px);
	padding: 10px 0 0 20px;
	float: right;
}

.menu-category-food-item-preview-info > h2{
	font-size: 18px;
	font-weight: bold;
	margin: 0;
}

.menu-category-food-item-preview-info > h2 a{
	color: #333;
	transition: color .3s ease;
}

.menu-category-food-item-preview-info > h2 a:hover{
	color: #ec910e;
}

.menu-category-food-item-weight{
	display: inline-block;
	color: rgba(0,0,0,.6);
	margin: 2px 0 0 0;
}

.menu-category-food-item-description{
	margin: 7px 0 0 0;
}

.menu-category-food-item-labels{
	margin: 11px 0 0 0;
}

.menu-food-item-preview-btns{
	position: absolute;
	top: 10px;
	right: 7px;
	opacity: 0;
	transform: scale(.5);
	transition: opacity .3s ease, transform .3s ease;
	transition-delay: .1s;
}

.menu-food-item-preview-img{
	display: block;
	width: 100%;
	height: 100%;
}

.menu-category-food-items-list > li:hover .menu-food-item-preview-btns{
	opacity: 1;
	transform: scale(1);
}
/* ... */

